[tool.poetry]
name = "auction-crawler"
version = "0.1.0"
description = ""
authors = ["Vytenis Dambrauskas <vytenisdambrauskas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
